input and output

--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -232,9 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ln.core.datasets.anndata_with_obs()\n",
-    "\n",
-    "ln.Artifact(adata, description=\"anndata to append\").save()"
+    "artifact = ln.Artifact(ln.core.datasets.anndata_with_obs(), description=\"adata to append\").save()"
    ]
   },
   {
@@ -243,6 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "adata = artifact.load()\n",
+    "\n",
     "adata.obs_names_make_unique()\n",
     "adata.var_names_make_unique()\n",
     "\n",
