use from_anndata

--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -232,7 +232,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact(ln.core.datasets.anndata_with_obs(), description=\"adata to append\").save()"
+    "artifact = ln.Artifact.from_anndata(\n",
+    "    ln.core.datasets.anndata_with_obs(), \n",
+    "    description=\"adata to append\"\n",
+    ").save()"
    ]
   },
   {
