save artifact fom cli

--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -232,10 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.from_anndata(\n",
-    "    ln.core.datasets.anndata_with_obs(), \n",
-    "    description=\"adata to append\"\n",
-    ").save()"
+    "ln.core.datasets.anndata_with_obs().write_h5ad(\"adata_to_append.h5ad\")"
    ]
   },
   {
@@ -244,7 +241,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = artifact.load()\n",
+    "!lamin save adata_to_append.h5ad --description \"adata to append\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = ln.Artifact.filter(description=\"adata to append\").one().load()\n",
     "\n",
     "adata.obs_names_make_unique()\n",
     "adata.var_names_make_unique()\n",
