📝 Track all anndatas in scrna-tiledbsoma (#153)

--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -232,7 +232,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ln.core.datasets.anndata_with_obs()\n",
+    "ln.core.datasets.anndata_with_obs().write_h5ad(\"adata_to_append.h5ad\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "!lamin save adata_to_append.h5ad --description \"adata to append\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "adata = ln.Artifact.filter(description=\"adata to append\").one().load()\n",
     "\n",
     "adata.obs_names_make_unique()\n",
     "adata.var_names_make_unique()\n",
@@ -356,6 +382,29 @@
    "outputs": [],
    "source": [
     "soma_artifact.versions.df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## View lineage of th array store"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the generating flow of the array store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soma_artifact.view_lineage()"
    ]
   },
   {
