--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -30,19 +30,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c03d51f8",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "import lamindb as ln"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "626c2cef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import lamindb as ln\n",
+    "\n",
     "ln.context.uid = \"Qr1kIHvK506r0000\"\n",
     "ln.context.track()"
    ]
@@ -102,7 +98,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "42c0fcf0",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "with collection.mapped(obs_keys=[\"cell_type\"], join=\"inner\") as dataset:\n",
@@ -121,7 +121,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "15f6caaa",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "dataset = collection.mapped(obs_keys=[\"cell_type\"], join=\"outer\")"
@@ -131,7 +135,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a736b129",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "len(dataset.var_joint)"
@@ -202,7 +210,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cef13ba8",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader, WeightedRandomSampler\n",
@@ -226,7 +238,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "26015540",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "for batch in dataloader:\n",
@@ -245,7 +261,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c3b507f6",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "dataset.close()"
