--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -85,7 +85,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# load a number of AnnData objects that's small enough to fit into memory\n",
@@ -107,7 +111,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "for i, adata in enumerate(adatas):\n",
@@ -229,7 +237,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.core.datasets.anndata_with_obs().write_h5ad(\"adata_to_append.h5ad\")"
@@ -320,7 +332,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# read the data matrix\n",
@@ -378,7 +394,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "soma_artifact.versions.df()"
@@ -388,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## View lineage of th array store"
+    "## View lineage of the array store"
    ]
   },
   {
