--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -483,9 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = bt.Source.get(\n",
-    "    name=\"ensembl\", version=\"release-112\", organism=\"human\"\n",
-    ")\n",
+    "source = bt.Source.get(name=\"ensembl\", version=\"release-112\", organism=\"human\")\n",
     "public = bt.Gene.public(source=source)\n",
     "public"
    ]
