--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -62,9 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.get(\n",
-    "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
-    ")\n",
+    "collection = ln.Collection.get(name=\"My versioned scRNA-seq collection\", version=\"2\")\n",
     "collection.describe()"
    ]
   },
@@ -96,9 +94,15 @@
     "adatas = [artifact.load() for artifact in collection.ordered_artifacts]\n",
     "\n",
     "# compute the intersection of columns for these objects\n",
-    "var_columns = reduce(pd.Index.intersection, [adata.var.columns for adata in adatas])  # this only affects metadata columns of features (say, gene annotations)\n",
-    "var_raw_columns = reduce(pd.Index.intersection, [adata.raw.var.columns for adata in adatas])\n",
-    "obs_columns = reduce(pd.Index.intersection, [adata.obs.columns for adata in adatas])  # this actually subsets features (dataset dimensions)"
+    "var_columns = reduce(\n",
+    "    pd.Index.intersection, [adata.var.columns for adata in adatas]\n",
+    ")  # this only affects metadata columns of features (say, gene annotations)\n",
+    "var_raw_columns = reduce(\n",
+    "    pd.Index.intersection, [adata.raw.var.columns for adata in adatas]\n",
+    ")\n",
+    "obs_columns = reduce(\n",
+    "    pd.Index.intersection, [adata.obs.columns for adata in adatas]\n",
+    ")  # this actually subsets features (dataset dimensions)"
    ]
   },
   {
@@ -120,17 +124,19 @@
    "source": [
     "for i, adata in enumerate(adatas):\n",
     "    del adata.obsp  # not supported by tiledbsoma\n",
-    "    del adata.uns   # not supported by tiledbsoma\n",
-    "    \n",
+    "    del adata.uns  # not supported by tiledbsoma\n",
+    "\n",
     "    adata.obs = adata.obs.filter(obs_columns)  # filter columns to intersection\n",
-    "    adata.obs[\"obs_id\"] = adata.obs.index  # prepare a column for tiledbsoma to use as an index\n",
+    "    adata.obs[\"obs_id\"] = (\n",
+    "        adata.obs.index\n",
+    "    )  # prepare a column for tiledbsoma to use as an index\n",
     "    adata.obs[\"dataset\"] = i\n",
     "    adata.obs.index.name = None\n",
-    "    \n",
+    "\n",
     "    adata.var = adata.var.filter(var_columns)  # filter columns to intersection\n",
     "    adata.var[\"var_id\"] = adata.var.index\n",
     "    adata.var.index.name = None\n",
-    "    \n",
+    "\n",
     "    drop_raw_var_columns = adata.raw.var.columns.difference(var_raw_columns)\n",
     "    adata.raw.var.drop(columns=drop_raw_var_columns, inplace=True)\n",
     "    adata.raw.var[\"var_id\"] = adata.raw.var.index\n",
@@ -167,7 +173,7 @@
     "    measurement_name=\"RNA\",\n",
     "    obs_id_name=\"obs_id\",\n",
     "    var_id_name=\"var_id\",\n",
-    "    append_obsm_varm=True\n",
+    "    append_obsm_varm=True,\n",
     ")"
    ]
   },
@@ -211,12 +217,12 @@
     "with soma_artifact.open() as soma_store:\n",
     "    obs = soma_store[\"obs\"]\n",
     "    var = soma_store[\"ms\"][\"RNA\"][\"var\"]\n",
-    "    \n",
+    "\n",
     "    obs_columns_store = obs.schema.names\n",
     "    var_columns_store = var.schema.names\n",
-    "    \n",
+    "\n",
     "    obs_store_df = obs.read().concat().to_pandas()\n",
-    "    \n",
+    "\n",
     "    display(obs_store_df)"
    ]
   },
@@ -280,10 +286,14 @@
     "\n",
     "adata.obs[\"dataset\"] = obs_store_df[\"dataset\"].max()\n",
     "\n",
-    "obs_columns_same = [obs_col for obs_col in adata.obs.columns if obs_col in obs_columns_store]\n",
+    "obs_columns_same = [\n",
+    "    obs_col for obs_col in adata.obs.columns if obs_col in obs_columns_store\n",
+    "]\n",
     "adata.obs = adata.obs[obs_columns_same]\n",
     "\n",
-    "var_columns_same = [var_col for var_col in adata.var.columns if var_col in var_columns_store]\n",
+    "var_columns_same = [\n",
+    "    var_col for var_col in adata.var.columns if var_col in var_columns_store\n",
+    "]\n",
     "adata.var = adata.var[var_columns_same]\n",
     "\n",
     "adata.write_h5ad(\"adata_to_append.h5ad\")"
@@ -311,7 +321,7 @@
     "    revises=soma_artifact,\n",
     "    measurement_name=\"RNA\",\n",
     "    obs_id_name=\"obs_id\",\n",
-    "    var_id_name=\"var_id\"\n",
+    "    var_id_name=\"var_id\",\n",
     ")"
    ]
   },
@@ -373,7 +383,7 @@
     "        measurement_name=\"RNA\",\n",
     "        collection_name=\"obsm\",\n",
     "        matrix_name=\"pca\",\n",
-    "        matrix_data=pca_array\n",
+    "        matrix_data=pca_array,\n",
     "    )"
    ]
   },
