--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -57,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,aws,bionty]' \n",
+    "# !pip install 'lamindb[jupyter,aws,bionty]'\n",
     "!lamin init --storage ./test-scrna --schema bionty"
    ]
   },
@@ -124,14 +124,14 @@
    "outputs": [],
    "source": [
     "curate = ln.Curator.from_anndata(\n",
-    "    adata, \n",
-    "    var_index=bt.Gene.ensembl_gene_id, \n",
+    "    adata,\n",
+    "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals={\n",
-    "        adata.obs.donor.name: ln.ULabel.name, \n",
-    "        adata.obs.tissue.name: bt.Tissue.name, \n",
-    "        adata.obs.cell_type.name: bt.CellType.name, \n",
-    "        adata.obs.assay.name: bt.ExperimentalFactor.name\n",
-    "    }, \n",
+    "        adata.obs.donor.name: ln.ULabel.name,\n",
+    "        adata.obs.tissue.name: bt.Tissue.name,\n",
+    "        adata.obs.cell_type.name: bt.CellType.name,\n",
+    "        adata.obs.assay.name: bt.ExperimentalFactor.name,\n",
+    "    },\n",
     "    organism=\"human\",\n",
     ")"
    ]
