--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -93,7 +93,11 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(adata, var_index=bt.Gene.symbol, categoricals={adata.obs.cell_type.name: bt.CellType.name})"
+    "curate = ln.Curator.from_anndata(\n",
+    "    adata,\n",
+    "    var_index=bt.Gene.symbol,\n",
+    "    categoricals={adata.obs.cell_type.name: bt.CellType.name},\n",
+    ")"
    ]
   },
   {
@@ -165,7 +169,11 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(adata_validated, var_index=bt.Gene.ensembl_gene_id, categoricals={\"cell_type\": bt.CellType.name})"
+    "curate = ln.Curator.from_anndata(\n",
+    "    adata_validated,\n",
+    "    var_index=bt.Gene.ensembl_gene_id,\n",
+    "    categoricals={\"cell_type\": bt.CellType.name},\n",
+    ")"
    ]
   },
   {
@@ -344,7 +352,7 @@
    "outputs": [],
    "source": [
     "collection_v2 = ln.Collection(\n",
-    "[artifact, collection_v1.artifacts.all()[0]],\n",
+    "    [artifact, collection_v1.artifacts.all()[0]],\n",
     "    revises=collection_v1,\n",
     ").save()"
    ]
