--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -65,9 +65,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.get(\n",
-    "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
-    ")"
+    "collection = ln.Collection.get(name=\"My versioned scRNA-seq collection\", version=\"2\")"
    ]
   },
   {
