--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -62,9 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.get(\n",
-    "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
-    ")\n",
+    "collection = ln.Collection.get(name=\"My versioned scRNA-seq collection\", version=\"2\")\n",
     "collection.describe()"
    ]
   },
