--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -208,8 +208,8 @@
    "source": [
     "select_by_cell_type = (\"CD16-positive, CD56-dim natural killer cell, human\", \"macrophage\")\n",
     "\n",
-    "with collection.mapped(obs_filter=(\"cell_type\", select_by_cell_type)) as dataset:\n",
-    "    print(dataset.shape)"
+    "with collection.mapped(obs_filter=(\"cell_type\", select_by_cell_type)) as dataset_filter:\n",
+    "    print(dataset_filter.shape)"
    ]
   },
   {
