hide cell output

--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -203,7 +203,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8a6aec46",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "select_by_cell_type = (\"CD16-positive, CD56-dim natural killer cell, human\", \"macrophage\")\n",
