--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -244,7 +244,7 @@
     "But given the image is part of the notebook, we can also rely on the report that we create when saving the notebook:\n",
     "\n",
     "```\n",
-    "ln.context.finish()\n",
+    "ln.finish()\n",
     "```"
    ]
   }
