--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -41,8 +41,7 @@
     "import tiledbsoma.io\n",
     "from functools import reduce\n",
     "\n",
-    "ln.context.uid = \"oJN8WmVrxI8m0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"oJN8WmVrxI8m0000\")"
    ]
   },
   {
