--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -38,8 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.context.uid = \"ManDYgmftZ8C0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"ManDYgmftZ8C0000\")"
    ]
   },
   {
