--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -38,8 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.context.uid = \"agayZTonayqA0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"agayZTonayqA0000\")"
    ]
   },
   {
