--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -38,8 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.context.uid = \"mfWKm8OtAzp80000\"\n",
-    "ln.context.track()"
+    "ln.track(\"mfWKm8OtAzp80000\")"
    ]
   },
   {
