--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -39,8 +39,7 @@
    "source": [
     "import lamindb as ln\n",
     "\n",
-    "ln.context.uid = \"Qr1kIHvK506r0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"Qr1kIHvK506r0000\")"
    ]
   },
   {
