--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -74,8 +74,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.context.uid = \"Nv48yAceNSh80000\"\n",
-    "ln.context.track()"
+    "ln.track(\"Nv48yAceNSh80000\")"
    ]
   },
   {
