📝 Polish scrna guide

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -20,20 +20,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll learn how to manage a growing number of scRNA-seq datasets as a single queryable & batch-iterable collection.\n",
+    "Here, you'll learn how to manage a growing number of scRNA-seq datasets as a single queryable collection:\n",
     "\n",
-    "Along the way, you'll see how to create reports, leverage data lineage, and query individual datasets.\n",
-    "\n",
-    "If you're only interested in _using_ a large curated scRNA-seq collection, see the [CELLxGENE Census guide](inv:docs#cellxgene).\n",
-    "\n",
-    "Here, you will:\n",
-    "\n",
-    "1. create an {class}`~lamindb.Artifact` from an `AnnData` object and seed a growing {class}`~lamindb.Collection` with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
-    "2. append a new dataset and create a new version of this collection ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
-    "3. query & inspect artifacts by metadata individually ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
-    "4. load the joint collection and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
-    "5. iterate over the collection and train a model ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))\n",
+    "1. create a dataset (an {class}`~lamindb.Artifact`) and seed a {class}`~lamindb.Collection` (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey))\n",
+    "2. append a new dataset to the collection ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
+    "3. query & analyze individual datasets ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
+    "4. load the collection into memory ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
+    "5. iterate over the collection to train an ML model ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna-mappedcollection))\n",
     "6. concatenate the collection to a single `tiledbsoma` array store ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna-tiledbsoma))\n",
+    "\n",
+    "If you're only interested in _using_ a large curated scRNA-seq collection, see the [CELLxGENE guide](inv:docs#cellxgene).\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -42,7 +38,7 @@
     "scrna2\n",
     "scrna3\n",
     "scrna4\n",
-    "scrna5\n",
+    "scrna-mappedcollection\n",
     "scrna-tiledbsoma\n",
     "```"
    ]
@@ -227,26 +223,6 @@
    "metadata": {},
    "source": [
     "It is annotated with rich metadata:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also see the types of the metadata:"
    ]
   },
   {
