--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -59,6 +59,8 @@
    "outputs": [],
    "source": [
     "adata = ln.core.datasets.anndata_pbmc68k_reduced()\n",
+    "# we don't trust the cell type annotation in this dataset\n",
+    "adata.obs.rename(columns={\"cell_type\": \"cell_type_untrusted\"}, inplace=True)\n",
     "adata"
    ]
   },
@@ -79,23 +81,11 @@
    },
    "outputs": [],
    "source": [
-    "bt.settings.organism = \"human\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
     "curate = ln.Curator.from_anndata(\n",
     "    adata,\n",
     "    var_index=bt.Gene.symbol,\n",
-    "    categoricals={adata.obs.cell_type.name: bt.CellType.name},\n",
+    "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
+    "    organism=\"human\",\n",
     ")"
    ]
   },
@@ -127,6 +117,7 @@
     "    adata.var.index,\n",
     "    field=bt.Gene.symbol,\n",
     "    return_field=bt.Gene.ensembl_gene_id,\n",
+    "    organism=\"human\",\n",
     ")\n",
     "# use ensembl_gene_id as the index\n",
     "adata.var.index.name = \"symbol\"\n",
@@ -171,7 +162,8 @@
     "curate = ln.Curator.from_anndata(\n",
     "    adata_validated,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\"cell_type\": bt.CellType.name},\n",
+    "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
+    "    organism=\"human\",\n",
     ")"
    ]
   },
@@ -212,7 +204,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since none of the cell types are validate, let us search the cell type names from the public ontology, and add the name found in the `AnnData` object as a synonym to the top match found in the public ontology."
+    "None of the cell type names are valid.\n",
+    "\n",
+    "We'll now search the public ontology and add the name found in the dataset as a synonym to the top match found in the public ontology."
    ]
   },
   {
@@ -226,15 +220,15 @@
    "outputs": [],
    "source": [
     "bionty = bt.CellType.public()  # access the public ontology through bionty\n",
-    "name_mapper = {}\n",
-    "for name in adata_validated.obs.cell_type.unique():\n",
-    "    # search the public ontology and use the ontology id of the top match\n",
-    "    ontology_id = bionty.search(name).iloc[0].ontology_id\n",
-    "    # create a record by loading the top match from bionty\n",
+    "name_mapping = {}\n",
+    "for name in adata_validated.obs.cell_type_untrusted.unique():\n",
+    "    ontology_id = bionty.search(name).iloc[0].ontology_id  # top search hit through iloc[0]\n",
     "    record = bt.CellType.from_source(ontology_id=ontology_id)\n",
-    "    name_mapper[name] = record.name  # map the original name to standardized name\n",
+    "    name_mapping[name] = record.name  # map the original name to standardized name\n",
     "    record.save()\n",
-    "    record.add_synonym(name)"
+    "    record.add_synonym(name)\n",
+    "# print the mapping\n",
+    "print(name_mapping)"
    ]
   },
   {
@@ -254,7 +248,8 @@
    },
    "outputs": [],
    "source": [
-    "adata_validated.obs.cell_type = adata_validated.obs.cell_type.map(name_mapper)"
+    "adata_validated.obs[\"cell_type_untrusted_original\"] = adata_validated.obs[\"cell_type_untrusted\"]  # copy the original annotations\n",
+    "adata_validated.obs[\"cell_type_untrusted\"] = adata_validated.obs[\"cell_type_untrusted_original\"].map(name_mapping)"
    ]
   },
   {
@@ -351,7 +346,7 @@
    "outputs": [],
    "source": [
     "collection_v2 = ln.Collection(\n",
-    "    [artifact, collection_v1.artifacts.all()[0]],\n",
+    "    [collection_v1.artifacts.all()[0], artifact],\n",
     "    revises=collection_v1,\n",
     ").save()"
    ]
@@ -407,10 +402,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "collection_v2.view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "collection_v2.ordered_artifacts[0].view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "collection_v2.ordered_artifacts[1].view_lineage()"
    ]
   }
  ],
