--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -457,7 +457,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.Gene.list_source().df()"
+    "bt.Source.filter(entity=\"bionty.Gene\").df()"
    ]
   },
   {
@@ -467,7 +467,7 @@
    "outputs": [],
    "source": [
     "# only lists the sources that are currently used\n",
-    "bt.Gene.list_source(currently_used=True).df()"
+    "bt.Source.filter(entity=\"bionty.Gene\", currently_used=True).df()"
    ]
   },
   {
@@ -511,7 +511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py310",
    "language": "python",
    "name": "python3"
   },
