--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -295,10 +295,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact.view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Re-curate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We review the dataset and find all annotations trustworthy up there being a `'CD38-positive naive B cell'`.\n",
+    "\n",
+    "Inspecting the `name_mapping` in detail tells us `'CD8+/CD45RA+ Naive Cytotoxic'` was erroneously mapped on a B cell.\n",
+    "\n",
+    "Let us correct this and create a `'cell_type'` feature that we can now trust."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_mapping = {'CD38-positive naive B cell': 'cytotoxic T cell'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\"cell_type_untrusted\"].map(name_mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact_trusted = ln.Curator.from_anndata(\n",
+    "    adata_validated,\n",
+    "    var_index=bt.Gene.ensembl_gene_id,\n",
+    "    categoricals={\"cell_type\": bt.CellType.name, \"cell_type_untrusted\": bt.CellType.name},\n",
+    "    organism=\"human\",          \n",
+    ").save_artifact(\n",
+    "    description=\"10x reference adata, trusted cell type annotation\",\n",
+    "    revises=artifact,\n",
+    ")"
    ]
   },
   {
@@ -325,7 +391,7 @@
    },
    "outputs": [],
    "source": [
-    "collection_v1 = ln.Collection.get(name=\"My versioned scRNA-seq collection\")"
+    "collection_v1 = ln.Collection.get(name=\"My versioned scRNA-seq collection\", is_latest=True)"
    ]
   },
   {
@@ -346,7 +412,7 @@
    "outputs": [],
    "source": [
     "collection_v2 = ln.Collection(\n",
-    "    [collection_v1.artifacts.all()[0], artifact],\n",
+    "    [collection_v1.artifacts.all()[0], artifact_trusted],\n",
     "    revises=collection_v1,\n",
     ").save()"
    ]
@@ -410,32 +476,6 @@
    "outputs": [],
    "source": [
     "collection_v2.view_lineage()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection_v2.ordered_artifacts[0].view_lineage()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection_v2.ordered_artifacts[1].view_lineage()"
    ]
   }
  ],
